# hoa-utils

./: .pylintrc  404.html  AUTHORS.md  CONTRIBUTING.md  HISTORY.md  LICENSE  MANIFEST.in  Makefile  Pipfile  README.md  index.html  mkdocs.yml  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: RELEASE_PR.md
.github/workflows/: lint.yml  test.yml
authors/: index.html
contributing/: index.html
hoa/: __init__.py  __version__.py  core.py  dumpers.py  parsers.py  printers.py  types.py
hoa/ast/: __init__.py  acceptance.py  boolean_expression.py  label.py
hoa/grammars/: hoa.lark
hoa/helpers/: __init__.py  base.py
hoa/tools/: __init__.py  pyhoafparser.py
hoa2dot/: __init__.py  __main__.py  __version__.py  core.py  dot2hoa.py  dumpers.py  hoa2dot.py  parsers.py  printers.py  types.py
hoa2dot/ast/: acceptance.py  boolean_expression.py  label.py
hoa2dot/grammars/: hoa.lark
hoa2dot/helpers/: base.py
scripts/: check_copyright.py  whitelist.py
search/: search_index.json
tests/: __init__.py  conftest.py  test_acceptance.py  test_hoa2dot.py  test_hoaparser.py  test_label.py  test_parsing.py  test_printer.py  test_pyhoafparser.py  test_utils.py
tests/examples/: aut1.hoa
