[tool.poetry]
name = "hoa2dot"
version = "0.1.0"
description = "HOA format to Graphviz DOT translator."
authors = ["Marco Favorito <marco.favorito@gmail.com>, Francesco Fuggitti <francesco.fuggitti@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://whitemech.github.io/hoa2dot"
repository = "https://github.com/whitemech/hoa2dot.git"
documentation = "https://whitemech.github.io/hoa2dot"
keywords = [
    "HOA",
    "automata",
    "DOT",
    "Graphviz",
    "DFA"
]
classifiers = [
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
]
packages = [
    { include = "hoa2dot" },
]
include = []

[tool.poetry.scripts]
hoa2dot = 'hoa2dot.__main__:main'

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/whitemech/hoa2dot/issues"
"Pull Requests" = "https://github.com/whitemech/hoa2dot/pulls"

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.2"
lark-parser = "^0.9.0"

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"
pytest-cov = "^2.10.1"
pytest-randomly = "^3.4.1"
tox = "^3.19.0"
codecov = "^2.1.9"
black = "==20.8b1"
mypy = "^0.782"
isort = "^5.4.2"
flake8 = "^3.8.3"
flake8-docstrings = "^1.5.0"
flake8-bugbear = "^20.1.4"
flake8-eradicate = "^0.4.0"
#flake8-import-order = "^0.18.1" TODO: reintroduce
pylint = "^2.6.0"
safety = "^1.9.0"
vulture = "^2.1"
bandit = "^1.6.2"
mkdocs = "^1.1.2"
markdown_include = "^0.6.0"

[build-system]
requires = ["poetry >= 0.12, <1"]
build-backend = "poetry.masonry.api"
